--- a/tinyg.ipynb
+++ b/tinyg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -14,24 +14,69 @@
       "\n",
       "# All requested packages already installed.\n",
       "\n",
-      "connecting to the first available serial port\n",
+      "tinyg.py is running as main\n",
+      "connecting to ttyUSB0\n",
       "received a line {\"r\":{\"fv\":0.970},\"f\":[1,0,9,8424]}\n",
       "sending gcode G01 X 0.0F800\n",
       "waiting for status ok...\n",
       "received a line {\"r\":{},\"f\":[1,0,23,103]}\n",
       "received a line {\"sr\":{\"vel\":0.01,\"stat\":5}}\n",
-      "received a line {\"sr\":{\"posx\":71.920,\"vel\":609.41}}\n",
-      "received a line {\"sr\":{\"posx\":65.644,\"vel\":800.00}}\n",
-      "received a line {\"sr\":{\"posx\":59.112}}\n",
-      "received a line {\"sr\":{\"posx\":52.581}}\n",
-      "received a line {\"sr\":{\"posx\":46.049}}\n",
-      "received a line {\"sr\":{\"posx\":39.517}}\n",
-      "received a line {\"sr\":{\"posx\":32.985}}\n",
-      "received a line {\"sr\":{\"posx\":26.520}}\n",
-      "received a line {\"sr\":{\"posx\":19.989}}\n",
-      "received a line {\"sr\":{\"posx\":13.457}}\n",
-      "received a line {\"sr\":{\"posx\":6.925}}\n",
-      "received a line {\"sr\":{\"posx\":1.005,\"vel\":463.83}}\n",
+      "received a line {\"sr\":{\"posx\":358.233,\"vel\":609.41}}\n",
+      "received a line {\"sr\":{\"posx\":351.941,\"vel\":800.00}}\n",
+      "received a line {\"sr\":{\"posx\":345.476}}\n",
+      "received a line {\"sr\":{\"posx\":338.944}}\n",
+      "received a line {\"sr\":{\"posx\":332.413}}\n",
+      "received a line {\"sr\":{\"posx\":325.881}}\n",
+      "received a line {\"sr\":{\"posx\":319.349}}\n",
+      "received a line {\"sr\":{\"posx\":312.817}}\n",
+      "received a line {\"sr\":{\"posx\":306.286}}\n",
+      "received a line {\"sr\":{\"posx\":299.820}}\n",
+      "received a line {\"sr\":{\"posx\":293.289}}\n",
+      "received a line {\"sr\":{\"posx\":286.757}}\n",
+      "received a line {\"sr\":{\"posx\":280.225}}\n",
+      "received a line {\"sr\":{\"posx\":273.694}}\n",
+      "received a line {\"sr\":{\"posx\":267.162}}\n",
+      "received a line {\"sr\":{\"posx\":260.630}}\n",
+      "received a line {\"sr\":{\"posx\":254.098}}\n",
+      "received a line {\"sr\":{\"posx\":247.633}}\n",
+      "received a line {\"sr\":{\"posx\":241.102}}\n",
+      "received a line {\"sr\":{\"posx\":234.570}}\n",
+      "received a line {\"sr\":{\"posx\":228.038}}\n",
+      "received a line {\"sr\":{\"posx\":221.506}}\n",
+      "received a line {\"sr\":{\"posx\":214.975}}\n",
+      "received a line {\"sr\":{\"posx\":208.443}}\n",
+      "received a line {\"sr\":{\"posx\":201.978}}\n",
+      "received a line {\"sr\":{\"posx\":195.446}}\n",
+      "received a line {\"sr\":{\"posx\":188.914}}\n",
+      "received a line {\"sr\":{\"posx\":182.383}}\n",
+      "received a line {\"sr\":{\"posx\":175.851}}\n",
+      "received a line {\"sr\":{\"posx\":169.319}}\n",
+      "received a line {\"sr\":{\"posx\":162.787}}\n",
+      "received a line {\"sr\":{\"posx\":156.322}}\n",
+      "received a line {\"sr\":{\"posx\":149.790}}\n",
+      "received a line {\"sr\":{\"posx\":143.259}}\n",
+      "received a line {\"sr\":{\"posx\":136.727}}\n",
+      "received a line {\"sr\":{\"posx\":130.195}}\n",
+      "received a line {\"sr\":{\"posx\":123.663}}\n",
+      "received a line {\"sr\":{\"posx\":117.131}}\n",
+      "received a line {\"sr\":{\"posx\":110.598}}\n",
+      "received a line {\"sr\":{\"posx\":104.132}}\n",
+      "received a line {\"sr\":{\"posx\":97.600}}\n",
+      "received a line {\"sr\":{\"posx\":91.067}}\n",
+      "received a line {\"sr\":{\"posx\":84.535}}\n",
+      "received a line {\"sr\":{\"posx\":78.002}}\n",
+      "received a line {\"sr\":{\"posx\":71.470}}\n",
+      "received a line {\"sr\":{\"posx\":64.937}}\n",
+      "received a line {\"sr\":{\"posx\":58.471}}\n",
+      "received a line {\"sr\":{\"posx\":51.939}}\n",
+      "received a line {\"sr\":{\"posx\":45.406}}\n",
+      "received a line {\"sr\":{\"posx\":38.874}}\n",
+      "received a line {\"sr\":{\"posx\":32.342}}\n",
+      "received a line {\"sr\":{\"posx\":25.809}}\n",
+      "received a line {\"sr\":{\"posx\":19.277}}\n",
+      "received a line {\"sr\":{\"posx\":12.745}}\n",
+      "received a line {\"sr\":{\"posx\":6.279}}\n",
+      "received a line {\"sr\":{\"posx\":0.664,\"vel\":365.51}}\n",
       "received a line {\"sr\":{\"posx\":0.000,\"vel\":0.00,\"stat\":3}}\n",
       "status ok\n"
      ]
@@ -53,7 +98,7 @@
     "    try:\n",
     "      self.ser = serial.Serial(port=p, baudrate=115200, timeout=0, xonxoff=False)\n",
     "    except:\n",
-    "\t    print (\"Error opening serial port \", p)\n",
+    "\t    print(\"Error opening serial port \", p)\n",
     "\t    sys.exit()\n",
     "    self.handle_response()\n",
     "    self.ser.write(str.encode('{\"fv\":\"\"\\n'))\n",
@@ -112,17 +157,17 @@
     "         self._response += c; # append the character  \n",
     "    return j\n",
     "\n",
-    "  def move_to_filter(self,num):\n",
+    "  def move_to_filter(self,num): # num is a integer between 0 to 43, 44 is the same filter as 0\n",
     "    x = 360*(num/44)\n",
     "    return self.move_x(x,800)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "  print (\"connecting to the first available serial port\")\n",
+    "  print(\"tinyg.py is running as main\")\n",
+    "  print(\"connecting to ttyUSB0\")\n",
     "  tg = tinyg()\n",
-    "  # tg.open( serial_ports()[0] )\n",
-    "  tg.open( \"/dev/ttyUSB0\" )\n",
-    "  #tg.close\n",
-    "  tg.move_to_filter(0)"
+    "  tg.open(\"/dev/ttyUSB0\")\n",
+    "  tg.move_to_filter(0)\n",
+    "  #tg.close"
    ]
   },
   {
