--- a/tinyg.ipynb
+++ b/tinyg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,70 +14,20 @@
       "\n",
       "# All requested packages already installed.\n",
       "\n",
+      "Requirement already satisfied: opencv-python in /home/taoranzhang/anaconda3/lib/python3.7/site-packages (4.4.0.42)\n",
+      "Requirement already satisfied: numpy>=1.14.5 in /home/taoranzhang/anaconda3/lib/python3.7/site-packages (from opencv-python) (1.18.1)\n",
       "tinyg.py is running as main\n",
       "connecting to ttyUSB0\n",
       "received a line {\"r\":{\"fv\":0.970},\"f\":[1,0,9,8424]}\n",
-      "sending gcode G01 X 0.0F800\n",
+      "sending gcode G01 X 16.363636363636363F800\n",
       "waiting for status ok...\n",
-      "received a line {\"r\":{},\"f\":[1,0,23,103]}\n",
+      "received a line {\"r\":{},\"f\":[1,0,38,139]}\n",
       "received a line {\"sr\":{\"vel\":0.01,\"stat\":5}}\n",
-      "received a line {\"sr\":{\"posx\":358.233,\"vel\":609.41}}\n",
-      "received a line {\"sr\":{\"posx\":351.941,\"vel\":800.00}}\n",
-      "received a line {\"sr\":{\"posx\":345.476}}\n",
-      "received a line {\"sr\":{\"posx\":338.944}}\n",
-      "received a line {\"sr\":{\"posx\":332.413}}\n",
-      "received a line {\"sr\":{\"posx\":325.881}}\n",
-      "received a line {\"sr\":{\"posx\":319.349}}\n",
-      "received a line {\"sr\":{\"posx\":312.817}}\n",
-      "received a line {\"sr\":{\"posx\":306.286}}\n",
-      "received a line {\"sr\":{\"posx\":299.820}}\n",
-      "received a line {\"sr\":{\"posx\":293.289}}\n",
-      "received a line {\"sr\":{\"posx\":286.757}}\n",
-      "received a line {\"sr\":{\"posx\":280.225}}\n",
-      "received a line {\"sr\":{\"posx\":273.694}}\n",
-      "received a line {\"sr\":{\"posx\":267.162}}\n",
-      "received a line {\"sr\":{\"posx\":260.630}}\n",
-      "received a line {\"sr\":{\"posx\":254.098}}\n",
-      "received a line {\"sr\":{\"posx\":247.633}}\n",
-      "received a line {\"sr\":{\"posx\":241.102}}\n",
-      "received a line {\"sr\":{\"posx\":234.570}}\n",
-      "received a line {\"sr\":{\"posx\":228.038}}\n",
-      "received a line {\"sr\":{\"posx\":221.506}}\n",
-      "received a line {\"sr\":{\"posx\":214.975}}\n",
-      "received a line {\"sr\":{\"posx\":208.443}}\n",
-      "received a line {\"sr\":{\"posx\":201.978}}\n",
-      "received a line {\"sr\":{\"posx\":195.446}}\n",
-      "received a line {\"sr\":{\"posx\":188.914}}\n",
-      "received a line {\"sr\":{\"posx\":182.383}}\n",
-      "received a line {\"sr\":{\"posx\":175.851}}\n",
-      "received a line {\"sr\":{\"posx\":169.319}}\n",
-      "received a line {\"sr\":{\"posx\":162.787}}\n",
-      "received a line {\"sr\":{\"posx\":156.322}}\n",
-      "received a line {\"sr\":{\"posx\":149.790}}\n",
-      "received a line {\"sr\":{\"posx\":143.259}}\n",
-      "received a line {\"sr\":{\"posx\":136.727}}\n",
-      "received a line {\"sr\":{\"posx\":130.195}}\n",
-      "received a line {\"sr\":{\"posx\":123.663}}\n",
-      "received a line {\"sr\":{\"posx\":117.131}}\n",
-      "received a line {\"sr\":{\"posx\":110.598}}\n",
-      "received a line {\"sr\":{\"posx\":104.132}}\n",
-      "received a line {\"sr\":{\"posx\":97.600}}\n",
-      "received a line {\"sr\":{\"posx\":91.067}}\n",
-      "received a line {\"sr\":{\"posx\":84.535}}\n",
-      "received a line {\"sr\":{\"posx\":78.002}}\n",
-      "received a line {\"sr\":{\"posx\":71.470}}\n",
-      "received a line {\"sr\":{\"posx\":64.937}}\n",
-      "received a line {\"sr\":{\"posx\":58.471}}\n",
-      "received a line {\"sr\":{\"posx\":51.939}}\n",
-      "received a line {\"sr\":{\"posx\":45.406}}\n",
-      "received a line {\"sr\":{\"posx\":38.874}}\n",
-      "received a line {\"sr\":{\"posx\":32.342}}\n",
-      "received a line {\"sr\":{\"posx\":25.809}}\n",
-      "received a line {\"sr\":{\"posx\":19.277}}\n",
-      "received a line {\"sr\":{\"posx\":12.745}}\n",
-      "received a line {\"sr\":{\"posx\":6.279}}\n",
-      "received a line {\"sr\":{\"posx\":0.664,\"vel\":365.51}}\n",
-      "received a line {\"sr\":{\"posx\":0.000,\"vel\":0.00,\"stat\":3}}\n",
+      "received a line {\"sr\":{\"posx\":1.767,\"vel\":609.41}}\n",
+      "received a line {\"sr\":{\"posx\":8.049,\"vel\":800.00}}\n",
+      "received a line {\"sr\":{\"posx\":14.387,\"vel\":648.62}}\n",
+      "received a line {\"sr\":{\"posx\":16.364,\"vel\":0.36}}\n",
+      "received a line {\"sr\":{\"posx\":16.364,\"vel\":0.00,\"stat\":3}}\n",
       "status ok\n"
      ]
     }
@@ -88,6 +38,9 @@
     "import serial\n",
     "import time\n",
     "import json\n",
+    "!{sys.executable} -m pip install opencv-python\n",
+    "import cv2\n",
+    "\n",
     "\n",
     "class tinyg(object):\n",
     "  def __init__(self):\n",
@@ -138,6 +91,12 @@
     "     if self.check_status() == 3:\n",
     "        break\n",
     "    print (\"status ok\")\n",
+    "    cap = cv2.VideoCapture(0)\n",
+    "    ret, frame = cap.read()\n",
+    "#     cv2.imshow('frame',frame)\n",
+    "    cv2.imwrite(\"1.jpg\",frame)\n",
+    "#     cap.release()\n",
+    "#     cv2.destroyAllWindows()\n",
     "  \n",
     "  def handle_response(self):\n",
     "    j = {}\n",
@@ -166,7 +125,7 @@
     "  print(\"connecting to ttyUSB0\")\n",
     "  tg = tinyg()\n",
     "  tg.open(\"/dev/ttyUSB0\")\n",
-    "  tg.move_to_filter(0)\n",
+    "  tg.move_to_filter(2)\n",
     "  #tg.close"
    ]
   },
