--- a/tinyg.ipynb
+++ b/tinyg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,15 +19,15 @@
       "tinyg.py is running as main\n",
       "connecting to ttyUSB0\n",
       "received a line {\"r\":{\"fv\":0.970},\"f\":[1,0,9,8424]}\n",
-      "sending gcode G01 X 16.363636363636363F800\n",
+      "sending gcode G01 X 0.0F800\n",
       "waiting for status ok...\n",
-      "received a line {\"r\":{},\"f\":[1,0,38,139]}\n",
+      "received a line {\"r\":{},\"f\":[1,0,23,103]}\n",
       "received a line {\"sr\":{\"vel\":0.01,\"stat\":5}}\n",
-      "received a line {\"sr\":{\"posx\":1.767,\"vel\":609.41}}\n",
-      "received a line {\"sr\":{\"posx\":8.049,\"vel\":800.00}}\n",
-      "received a line {\"sr\":{\"posx\":14.387,\"vel\":648.62}}\n",
-      "received a line {\"sr\":{\"posx\":16.364,\"vel\":0.36}}\n",
-      "received a line {\"sr\":{\"posx\":16.364,\"vel\":0.00,\"stat\":3}}\n",
+      "received a line {\"sr\":{\"posx\":14.545,\"vel\":617.55}}\n",
+      "received a line {\"sr\":{\"posx\":8.248,\"vel\":800.00}}\n",
+      "received a line {\"sr\":{\"posx\":1.923,\"vel\":641.09}}\n",
+      "received a line {\"sr\":{\"posx\":0.000,\"vel\":0.36}}\n",
+      "received a line {\"sr\":{\"posx\":0.000,\"vel\":0.00,\"stat\":3}}\n",
       "status ok\n"
      ]
     }
@@ -94,7 +94,7 @@
     "    cap = cv2.VideoCapture(0)\n",
     "    ret, frame = cap.read()\n",
     "#     cv2.imshow('frame',frame)\n",
-    "    cv2.imwrite(\"1.jpg\",frame)\n",
+    "    cv2.imwrite(str(int(time.time()))+\".jpg\",frame)\n",
     "#     cap.release()\n",
     "#     cv2.destroyAllWindows()\n",
     "  \n",
@@ -125,7 +125,7 @@
     "  print(\"connecting to ttyUSB0\")\n",
     "  tg = tinyg()\n",
     "  tg.open(\"/dev/ttyUSB0\")\n",
-    "  tg.move_to_filter(2)\n",
+    "  tg.move_to_filter(0)\n",
     "  #tg.close"
    ]
   },
